--- a/sejong_Alli/app/src/main/res/layout/activity_main.xml
+++ b/sejong_Alli/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.eeww9.sejong_alli.MainActivity">
+    tools:context="com.example.eeww9.sejong_alli.MainActivity"
+    android:background="@color/backgroundColor">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:background="@color/mainColor">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/mainColor" />
 
     </android.support.design.widget.AppBarLayout>
 
