--- a/sejong_Alli/app/src/main/res/layout/group.xml
+++ b/sejong_Alli/app/src/main/res/layout/group.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:padding="10dp"
+    android:background="@color/backgroundColor">
 
-    <Button
-        android:layout_width="wrap_content"
+    <Switch
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="group"
-        android:id="@+id/button3"
-        android:layout_gravity="center_horizontal" />
+        android:text="Push Group ON/OFF"
+        android:id="@+id/groupSwitch"
+        android:layout_gravity="left"/>
+
+    <ListView
+        android:id="@+id/groupList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:dividerHeight="5dp"
+        android:divider="@color/backgroundColor"
+        android:background="@color/white"/>
+
 </LinearLayout>
