--- a/sejong_Alli/app/src/main/res/layout/detail_info.xml
+++ b/sejong_Alli/app/src/main/res/layout/detail_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
@@ -13,138 +13,172 @@
         android:text="Title"
         android:textSize="12pt"
         android:textStyle="bold"
-        android:textColor="@color/mainColor"/>
+        android:textColor="@color/mainColor"
+        android:layout_alignParentStart="true"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
-
-        <ImageView
-            android:id="@+id/detailImage"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:src="@drawable/basic_image"
-            android:scaleType="fitXY"/>
-
-        <LinearLayout
+        android:id="@+id/linerlayoutone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingLeft="8dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+        android:layout_below="@+id/detailTitle">
 
-            <TextView
-                android:id="@+id/smallTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Title"
-                android:textSize="10pt"
-                android:textColor="@color/mainColor"/>
-            <TextView
-                android:id="@+id/smallHost"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Host"/>
-            <TextView
-                android:id="@+id/smallDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="~ 2016_12_20 (TUE)"/>
+            <ImageView
+                android:id="@+id/detailImage"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/basic_image"
+                android:scaleType="fitXY"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="8dp">
+
+                <TextView
+                    android:id="@+id/smallTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Title"
+                    android:textSize="10pt"
+                    android:textColor="@color/mainColor"/>
+                <TextView
+                    android:id="@+id/smallHost"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Host"/>
+                <TextView
+                    android:id="@+id/smallDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="~ 2016_12_20 (TUE)"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        android:layout_below="@+id/linerlayoutone"
+        android:layout_above="@+id/linerlayouttwo">
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Total Information"
+            android:textColor="@color/mainColor"
+            android:textStyle="bold"
+            android:textSize="10pt"
+            android:layout_marginBottom="3dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Attend Condition"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/attendCondition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Contents"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/contents"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Benefits"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/benefits"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Date"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Reception"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/reception"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Notice"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/notice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="* Contact Information"
+            android:textColor="@color/textTitle"/>
+        <TextView
+            android:id="@+id/contactInformation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nothing"
+            android:layout_marginBottom="3dp"/>
     </LinearLayout>
+    </ScrollView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total Information"
-        android:textColor="@color/mainColor"
-        android:textStyle="bold"
-        android:textSize="10pt"
-        android:layout_marginBottom="3dp"/>
+    <LinearLayout
+        android:id="@+id/linerlayouttwo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Attend Condition"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/attendCondition"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
+            <Button
+                android:id="@+id/kakaoButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="kakao"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Contents"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/contents"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
+            <Button
+                android:id="@+id/facebookButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="facebook"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Benefits"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/benefits"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Date"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Reception"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/reception"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Notice"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/notice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="* Contact Information"
-        android:textColor="@color/textTitle"/>
-    <TextView
-        android:id="@+id/contactInformation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Nothing"
-        android:layout_marginBottom="3dp"/>
+        </LinearLayout>
 
-
-</LinearLayout>
+</RelativeLayout>
