--- a/sejong_Alli/app/src/main/res/layout/detail_info.xml
+++ b/sejong_Alli/app/src/main/res/layout/detail_info.xml
@@ -13,7 +13,8 @@
         android:text="Title"
         android:textSize="12pt"
         android:textStyle="bold"
-        android:textColor="@color/mainColor"
+        android:textColor="@color/backgroundColor"
+        android:background="@color/mainColor"
         android:layout_alignParentStart="true"/>
 
     <LinearLayout
@@ -26,8 +27,8 @@
 
             <ImageView
                 android:id="@+id/detailImage"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="110dp"
+                android:layout_height="130dp"
                 android:src="@drawable/basic_image"
                 android:scaleType="fitXY"/>
 
@@ -60,24 +61,29 @@
 
         </LinearLayout>
 
+    <TextView
+        android:id="@+id/totalInformation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Total Information"
+        android:textColor="@color/backgroundColor"
+        android:textStyle="bold"
+        android:textSize="10pt"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp"
+        android:background="@color/mainColor"
+        android:layout_below="@+id/linerlayoutone"/>
+
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-        android:layout_below="@+id/linerlayoutone"
+        android:layout_below="@+id/totalInformation"
         android:layout_above="@+id/linerlayouttwo">
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Total Information"
-            android:textColor="@color/mainColor"
-            android:textStyle="bold"
-            android:textSize="10pt"
-            android:layout_marginBottom="3dp"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -165,19 +171,24 @@
         android:id="@+id/linerlayouttwo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:gravity="right"
+        >
 
-            <Button
+            <ImageButton
                 android:id="@+id/kakaoButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="kakao"/>
+                android:src="@drawable/kabtn_small"
+                android:background="@color/backgroundColor"/>
 
-            <Button
+            <ImageButton
                 android:id="@+id/facebookButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="facebook"/>
+                android:src="@drawable/fbbtn_small"
+                android:background="@color/backgroundColor"
+                android:layout_marginLeft="4dp"/>
 
         </LinearLayout>
 
