--- a/sejong_Alli/app/src/main/res/layout/write_group.xml
+++ b/sejong_Alli/app/src/main/res/layout/write_group.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +7,7 @@
     android:background="@color/backgroundColor">
 
     <TextView
+        android:id="@+id/topText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Application Guideline"
@@ -16,8 +17,10 @@
         android:padding="5dp"
         />
     <LinearLayout
+        android:id="@+id/oneLiner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topText">
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,8 +36,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/twoLiner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/oneLiner">
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,22 +70,27 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/threeLiner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contents"
         android:textSize="9pt"
-        android:textColor="@color/mainColor"/>
+        android:textColor="@color/mainColor"
+        android:layout_below="@+id/twoLiner"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editContents"
         android:lines="10"
-        android:background="@color/white"/>
+        android:background="@color/white"
+        android:layout_below="@+id/threeLiner"/>
 
     <LinearLayout
+        android:id="@+id/fourLiner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editContents">
 
         <TextView
             android:layout_width="wrap_content"
@@ -96,8 +106,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/fiveLiner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fourLiner">
 
         <TextView
             android:layout_width="wrap_content"
@@ -113,8 +125,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/sixLiner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fiveLiner">
 
         <TextView
             android:layout_width="wrap_content"
@@ -138,6 +152,7 @@
         android:background="@color/mainColor"
         android:textColor="@color/white"
         android:textSize="10pt"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        android:layout_below="@+id/sixLiner"/>
 
-</LinearLayout>
+</RelativeLayout>
