--- a/sejong_Alli/app/src/main/res/values/colors.xml
+++ b/sejong_Alli/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#c3002f</color>
+    <color name="colorAccent">#ffb4ce</color>
     <color name="mainColor">#c3002f</color>
     <color name="backgroundColor">#fffde4</color>
     <color name="white">#ffffff</color>
