--- a/sejong_Alli/app/src/main/res/layout/activity_main.xml
+++ b/sejong_Alli/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.eeww9.sejong_alli.MainActivity"
+    tools:context="com.example.eeww9.sejong_alli.activity.MainActivity"
     android:background="@color/backgroundColor">
 
     <android.support.design.widget.AppBarLayout
