Remove unused image file

--- a/sejong_Alli/app/src/main/res/layout/activity_splash.xml
+++ b/sejong_Alli/app/src/main/res/layout/activity_splash.xml
@@ -11,6 +11,6 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:src="@drawable/loading"/>
+        android:src="@drawable/spalsh_image"/>
 
 </LinearLayout>
