--- a/sejong_Alli/app/src/main/res/layout/custom_view.xml
+++ b/sejong_Alli/app/src/main/res/layout/custom_view.xml
@@ -9,7 +9,7 @@
         android:id="@+id/customImage"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@drawable/basic_image"
+        android:src="@drawable/board_item_basic_thumbnail"
         android:scaleType="fitXY"/>
 
     <LinearLayout
