--- a/sejong_Alli/app/src/main/res/values/dimens.xml
+++ b/sejong_Alli/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="write_view_small_title">9pt</dimen>
+    <dimen name="btn_text_size">10pt</dimen>
 </resources>
